# susy-bridge

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  deployment_guide.md  license_header.txt
bridge/: Cargo.toml  build.rs
bridge/src/: accept_message_from_main.rs  block_number_stream.rs  bridge.rs  config.rs  database.rs  deploy.rs  error.rs  helpers.rs  lib.rs  log_stream.rs  macros.rs  main_contract.rs  message_to_main.rs  ordered_stream.rs  relay_stream.rs  send_tx_with_receipt.rs  side_contract.rs  side_to_main_sign.rs  side_to_main_signatures.rs  signature.rs  test.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
contracts/: Cargo.toml  build.rs
contracts/src/: lib.rs
deploy/: Cargo.toml  build.rs
deploy/src/: main.rs
integration-tests/: Cargo.toml  bridge_config.toml
integration-tests/tests/: basic_deposit_then_withdraw.rs
