[package]
name = "susy-bridge-deploy"
version = "0.5.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[[bin]]
name = "susy-bridge-deploy"
path = "src/main.rs"

[dependencies]
bridge = { path = "../bridge" }
serde = {version = "1.0",registry="susytech"}
serde_derive = {version = "1.0",registry="susytech"}
tokio-core = "0.1.8"
docopt = {version = "1.0",registry="susytech"}
log = {version="0.4",registry="susytech"}
env_logger = {version="0.5",registry="susytech"}
futures = "0.1.14"
susyweb = { git = "https://github.com/tomusdrw/rust-susyweb" }
