[package]
name = "integration-tests"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>", "snd <kruemaxi@gmail.com>"]

[dependencies]
bridge = { path = "../bridge" }
bridge-contracts = { path = "../contracts", features = ["integration-tests"] }
sofabi = {version="6.0",registry="susytech"}
sophon-types = {version="0.4",registry="susytech"}
futures = {version = "0.1",registry="susytech"}
susy-jsonrpc-core = "8.0"
pretty_assertions = "0.2.1"
rustc-hex = {version = "1.0",registry="susytech"}
serde_json = {version = "1.0",registry="susytech"}
tempdir = {version="0.3.5",registry="susytech"}
tokio-core = "0.1.8"
susyweb = { git = "https://github.com/tomusdrw/rust-susyweb" }
